完成未读消息数量显示功能

--- a/src/components/chat/index.less
+++ b/src/components/chat/index.less
@@ -8,3 +8,19 @@
   width:100%;
   height:auto;
 }
+.chat-header{
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:40;
+  width:100%;
+}
+.main-chat{
+  margin-top:100px;
+}
+.chat-me  .am-list-content{
+  text-align:right !important;
+}
+.am-list-item .am-list-line .am-list-extra{
+  flex-basis:10%;
+}
